# ai-institut

./: .firebaserc  .gitignore  ADMIN_DOMAIN_IMPLEMENTATION_REPORT.md  AGSK_AUTH_FIX_SUMMARY.md  AGSK_AUTH_FIX_TEST_PLAN.md  AGSK_DEPLOYMENT_CHECKLIST.md  AGSK_EVALUATION_DATASET.md  AGSK_FINAL_TECHNICAL_SPECIFICATION.md  AGSK_HARDENING_REPORT.md  AGSK_INTEGRATION_README.md  AGSK_QUICK_START.md  AGSK_RAG_CODE_SNIPPETS.md  AGSK_RAG_INTEGRATION_RESEARCH.md  AGSK_RETRIEVAL_VALIDATION_REPORT.md  AGSK_WEEK2_VALIDATION_REPORT.md  AGSK_WEEK4_VALIDATION_REPORT.md  AGSK_WEEK5_STANDARDS_CORPUS_REPORT.md  API_SERVER_RECOVERY_REPORT.md  APPLY_DB_OPTIMIZATION.md  ARCHITECTURE_ISOLATION_REPORT.md  ARCHITECTURE_PURGE_REPORT.md  AUDIT_SIMULATION_PLAN.md  AUTH_ARCHITECTURE.md  AUTH_FAILURE_RECOVERY.md  AUTH_LIFECYCLE_FLOW.md  AUTH_ROUTING_INCIDENT_REPORT.md  CALCULATIONS_FOUNDATION_PLAN.md  CALCULATIONS_IMPLEMENTATION_PLAN.md  CALCULATIONS_LIST.md  CALCULATIONS_PLATFORM_AUDIT.md  CALCULATIONS_STANDARDS_INDEX.md  CALCULATION_EXAMPLES_AND_FORMULAS.md  CALCULATION_EXAMPLES_AND_FORMULAS.md.bak  CLAUDE.md  CORPUS_COMPLETION_REPORT.md  CORPUS_INGESTION_REPORT.md  DEPLOYMENT_GOVERNANCE.md  DEPLOYMENT_GUIDE.md  DETERMINISM_CORE_REPORT.md  DETERMINISM_EXECUTION_ANALYSIS.md  (+191 more)
.claude/: settings.json  (+1 more)
services/calculation-engine/: Dockerfile  pyproject.toml  railway.json  requirements.txt
services/calculation-engine/app/: main.py
services/calculation-engine/app/api/: calculations.py  templates.py
services/calculation-engine/app/core/: logging.py
services/calculation-engine/app/engine/: evaluator.py  runner.py
services/calculation-engine/app/schemas/: template.py  variable.py
services/calculation-engine/src/: config.py
services/calculation-engine/src/api/: __init__.py
services/calculation-engine/src/api/endpoints/: calculations.py  reports.py
services/calculation-engine/src/database/migrations/: 001_create_reporting_schema.sql
services/calculation-engine/src/database/schema_updates/: 001_reporting_lifecycle.sql
services/calculation-engine/src/engine/: __init__.py  demo_pint_integration.py  dimensional_analysis.py  execution_graph.py  explainability.py  pint_safe_executor.py  runner.py
services/calculation-engine/src/schemas/: models.py
services/calculation-engine/templates/: pipe_stress.yaml
services/calculation-engine/tests/: test_api_calculations.py  test_api_templates.py  test_etap2_semantic_and_explainability.py  test_etap2_validation_framework.py  test_pint_safe_executor.py  test_reporting_lifecycle_integration.py
services/document-parser/: pyproject.toml  requirements.txt
services/document-parser/src/: __init__.py
services/document-parser/src/hashing/: __init__.py  deterministic.py
services/document-parser/src/lifecycle/: __init__.py  extraction_lifecycle.py
services/document-parser/src/models/: __init__.py  audit.py  document.py  formula.py  payload.py  template.py  traceability.py
services/document-parser/src/parsers/: __init__.py  base.py  docx_parser.py  excel_parser.py  pdf_parser.py  text_parser.py
services/document-parser/src/processors/: pdf_text_extractor.py
services/document-parser/tests/: test_pdf_determinism.py
(+793 files in other folders)
