[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "document-parser"
version = "0.1.0"
description = "Deterministic engineering knowledge extraction from regulatory documents (ГОСТ, СНиП, ASME)"
requires-python = ">=3.11"
authors = [{name = "EngHub", email = "engineering@enghub.local"}]

dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "sqlalchemy==2.0.23",
    "psycopg2-binary==2.9.9",
    "pdfplumber==0.10.3",
    "PyMuPDF==1.23.8",
    "pytesseract==0.3.10",
    "python-docx==1.0.1",
    "openpyxl==3.1.0",
    "sympy==1.12",
    "pint==0.23.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.1",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "UP", "B", "A"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests",
    "determinism: determinism verification tests",
]
